# kkpsgre

./: README.md  pyproject.toml  setup.py
doc/: MongoDB.md
kkpsgre/: __init__.py  comapi.py  connector.py  migration.py  psgre.py  webapi.py
kkpsgre/util/: __init__.py  com.py  dataframe.py  logger.py  sql.py
test/: README.md  dbconfig.py  schema.mongo.js  schema.mysql.sql  schema.psgre.sql  test.sh  test_error.py  test_insert.py  test_migration.py  test_select.py  test_sql_pandas.py  test_sql_polars.py
