[project]
name = "kkpsgre"
version = "1.4.8"
requires-python = ">= 3.12.2"
description = "Python datafarame interface for databases. We support PostgreSQL, MySQL and MongoDB."
dependencies = [
    'kklogger @ git+https://github.com/kazukingh01/kklogger.git@f6ddcc099da0102a14a62d67bede1b1c30eaf839',
    'psycopg2-binary==2.9.9',
    'pandas>=2.2.1',   # tested by pandas==2.2.3
    'numpy>=1.26.4',   # tested by numpy==2.2.1
    'polars>=1.18.0',  # tested by polars==1.18.0
    'pyarrow>=18.1.0', # tested by pyarrow==18.1.0
    'joblib>=1.3.2',
    'mysql-connector-python==9.0.0',
    'pymongo==4.7.3',
    'tqdm>=4.66.4',
    'fastapi>=0.112.0',
    'uvicorn>=0.30.5',
    'requests>=2.32.0',
]

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["kkpsgre", "kkpsgre.util"]
